first pass at porting to 3.0
git-svn-id: http://chianti.ucsd.edu/svn@18322 0ecc0d97-ab19-0410-9704-bfe1a75892f5